2003-04-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* kpse.cc: Move most functions from kpse-xfns.c here and make
	static.  Include most of kpse-xfns.h directly, removing
	unnecessary bits.

	* dMatrix.cc (Matrix::pseudo_inverse): Now const.
	* CMatrix.cc (ComplexMatrix::pseudo_inverse): Likewise.

2003-04-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* getopt.c, getopt1.c, getopt.h: Move here from kpathsea.
	* Makefile.in: Add them to the appropriates lists.

	* oct-getopt.c: Include "getopt.h", not <kpathsea/getopt.h>.

	* Makefile.in (liboctave.$(LIBEXT), liboctave.$(SHLEXT)): Adjust
	for new locations of kpathsea objects.
	Delete kpathsea targets.

	* pathsearch.cc (dir_path::set_program_name): Delete.

	* kpse.cc: New file.
	* Makefile.in (LIBOCT_PATHSEARCH_CXX_SOURCES): Add it to the list.

	* kpse.c: New file.
	* Makefile.in (LIBOCT_PATHSEARCH_C_SOURCES): Add it to the list.

	* kpse.h, kpse-config.h, kpse-xfns.h: New files.
	* Makefile.in (INCLUDES): Add them to the list.

	* oct-kpse.h: Delete.
	* Makefile.in (INCLUDES): Delete it from the list.

2003-04-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dbleSVD.h (SVD::SVD, SVD::operator =): Also copy type_computed.
	* CmplxSVD.h (ComplexSVD::ComplexSVD, ComplexSVD::operator =):
	Likewise.
	From Quentin H. Spencer <qspencer@ieee.org>.

2003-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-getopt.c: Include <kpathsea/getopt.h>, not "getopt.h".

2003-02-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-alloc.h (DECLARE_OCTAVE_ALLOCATOR): Handle systems with or
	without placement delete.

	* CMatrix.cc (ComplexMatrix::all_elements_are_real): Don't lose -0
	imaginary parts.

	* lo-ieee.h (lo_ieee_signbit): New macro.

2003-02-18  David Bateman <dbateman@free.fr>

	* dMatrix.cc (Matrix::inverse, Matrix::determinant, Matrix::solve):
	Use Lapack instead of Linpack.
	* Cmatrix.cc (ComplexMatrix::inverse, ComplexMatrix::determinant,
	ComplexMatrix::solve): Likewise.
